--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-spring.application.name=ClickFud
+
 server.port=${PORT:8080}
+
+
+# Railway will override this
+spring.application.name=clickfud
+
+# Disable security default login
+spring.security.user.name=admin
+spring.security.user.password=admin
